--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "2.93.3",
     "@vercel/analytics": "1.3.1",
+    "@vercel/blob": "2.0.1",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
